--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,6 +3,7 @@
     "target": "es5",
     "module": "commonjs",
     "lib": ["es6","dom"],
+    "types": ["reflect-metadata"],
     "plugins": [
       { "name": "typescript-tslint-plugin" }
     ],
