--- a/package.json
+++ b/package.json
@@ -26,11 +26,10 @@
     "mocha": "^5.2.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.12.0",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "typescript-tslint-plugin": "^0.2.1"
   },
   "dependencies": {
-    "@types/node": "^10.12.18",
-    "reflect-metadata": "^0.1.12",
-    "typescript-tslint-plugin": "^0.2.1"
+    "reflect-metadata": "^0.1.12"
   }
 }
